--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.emotg.naturecollection">
 
+    <!-- Donner les permission à l'application -->
+
+    <!--    Accès à l'internet   -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <!--    Accès à la connection   -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
