--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    compileSdkVersion 29
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
